# Assemble

./: CMakeLists.txt  README.md
design/: notes.md
include/: Application.cpp  Application.hpp  ResourceManager.hpp
include/Assemble/: Assemble.hpp  GUI.hpp
include/Game/: GUI.hpp  Game.hpp
include/Graphics/: Tilemap.hpp
include/States/: Game.hpp  Machine.hpp  State.hpp  States.hpp
include/Util/: MouseFreelook.hpp  Pannable.hpp  Zoomable.hpp
lib/imgui/imgui/: CMakeLists.txt
resource/maps/: map.json
resource/resources/: map.json
src/: Application.cpp  ResourceManager.cpp
src/Assemble/: GUI.cpp
src/Game/: GUI.cpp
src/Graphics/: Tilemap.cpp
src/States/: Game.cpp  Machine.cpp  State.cpp
src/Util/: MouseFreelook.cpp  Pannable.cpp  Zoomable.cpp
